# LSW

./: CMakeLists.txt  CONTRIBUTING.md  DATA_AND_PRIVACY.md  README.md
cloudtest/: CMakeLists.txt  TestGroup.xml.in  TestMap.xml.in
cmake/: findAppx.cmake
diagnostics/: collect-networking-logs.ps1  collect-wsl-logs.ps1  dump-init.sh  networking.sh  wsl.wprp  wsl_networking.wprp  wsl_storage.wprp
distributions/: DistributionInfo.json  validate-modern.py
doc/: README.md
doc/docs/: debugging.md  dev-loop.md  index.md
doc/docs/technical-documentation/: boot-process.md  drvfs.md  gns.md  index.md  init.md  interop.md  localhost.md  mini_init.md  plan9.md  relay.md  session-leader.md  systemd.md  wsl.exe.md  wslconfig.exe.md  wslg.exe.md  wslhost.exe.md  wslrelay.exe.md  wslservice.exe.md
localization/strings/cs-CZ/: Resources.resw
localization/strings/da-DK/: Resources.resw
localization/strings/de-DE/: Resources.resw
localization/strings/en-GB/: Resources.resw
localization/strings/en-US/: Resources.resw
localization/strings/es-ES/: Resources.resw
localization/strings/fi-FI/: Resources.resw
localization/strings/fr-FR/: Resources.resw
localization/strings/hu-HU/: Resources.resw
localization/strings/it-IT/: Resources.resw
localization/strings/ja-JP/: Resources.resw
localization/strings/ko-KR/: Resources.resw
localization/strings/nb-NO/: Resources.resw
localization/strings/nl-NL/: Resources.resw
localization/strings/pl-PL/: Resources.resw
localization/strings/pt-BR/: Resources.resw
localization/strings/pt-PT/: Resources.resw
localization/strings/ru-RU/: Resources.resw
localization/strings/sv-SE/: Resources.resw
localization/strings/tr-TR/: Resources.resw
localization/strings/zh-CN/: Resources.resw
localization/strings/zh-TW/: Resources.resw
src/linux/init/: CMakeLists.txt  DnsTunnelingChannel.cpp  DnsTunnelingChannel.h  GnsEngine.cpp  GnsEngine.h  GnsPortTracker.cpp  GnsPortTracker.h  Localization.cpp  NetworkManager.cpp  NetworkManager.h  WslDistributionConfig.cpp  WslDistributionConfig.h  binfmt.cpp  binfmt.h  common.h  config.cpp  config.h  drvfs.cpp  drvfs.h  init.cpp  localhost.cpp  main.cpp  plan9.cpp  plan9.h  telemetry.cpp  timezone.cpp  timezone.h  util.cpp  util.h  wslinfo.cpp  wslinfo.h  wslpath.cpp  wslpath.h
src/linux/plan9/: p9tracelogginghelper.h
src/shared/configfile/: configfile.cpp  configfile.h
src/windows/service/stub/: CMakeLists.txt  WslServiceProxyStub.rc
src/windows/wslinstaller/exe/: CMakeLists.txt  ServiceMain.cpp  WslInstaller.cpp  WslInstaller.h  WslInstallerFactory.cpp  main.rc
src/windows/wslinstaller/stub/: CMakeLists.txt  WslInstallerProxyStub.def  WslInstallerProxyStub.rc
(+85 files in other folders)
